Fixed broken link

--- a/public/communism/assignment/cornerstones/index.html
+++ b/public/communism/assignment/cornerstones/index.html
@@ -250,7 +250,7 @@
         <p>
             Det är också nu viktigt för hemsidor att skapa policys angående all personlig information som lagras på hemsidan. Detta inkluderar kakor men även
             tredjepartsfunktioner som Google Analytics, i vilket fall man endast behöver länka till 
-            <p href="https://policies.google.com/privacy?hl=en" target="_blank" rel="noopener">Googles&nbsp;policy</p>.
+            <a href="https://policies.google.com/privacy?hl=en" target="_blank" rel="noopener">Googles&nbsp;policy</a>.
         </p>
         <p>
             I sin integritetspolicy är det nu viktigare än någonsin att förklara tydligt hur man samlar in och lagrar användares information och även hur och var
